[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioesphomeserver"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Pete Keen", email = "pete@petekeen.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aioesphomeapi==24.3.0",
  "aiohttp==3.9.5",
  "aiohttp-sse==2.2.0",
]
version = "0.0.1"

[project.urls]
Documentation = "https://github.com/peterkeen/aioesphomeserver#readme"
Issues = "https://github.com/peterkeen/aioesphomeserver/issues"
Source = "https://github.com/peterkeen/aioesphomeserver"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:aioesphomeserver tests}"

[tool.coverage.run]
source_pkgs = ["aioesphomeserver", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
aioesphomeserver = ["aioesphomeserver", "*/aioesphomeserver/aioesphomeserver"]
tests = ["tests", "*/aioesphomeserver/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
